// Copyright 2019 Samaritan Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package protocol;

import "gogoproto/gogo.proto";
import "validate/validate.proto";

option go_package = "github.com/samaritan-proxy/samaritan/pb/config/protocol";

option (gogoproto.enum_stringer_all) = false;
option (gogoproto.goproto_enum_stringer_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.gostring_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

// Protocol enum.
enum Protocol {
  option (gogoproto.goproto_enum_prefix) = false;
  UNKNOWN = 0;
  // TCP
  TCP = 1;
  // MySQL
  MySQL = 2;
  // Redis
  Redis = 3;
}

// MySQL protocol option.
message MySQLOption {}

// TCP protocol option.
message TCPOption {}

// Redis protocol option.
message RedisOption {
  enum ReadStrategy {
    // Read from master nodes.
    MASTER = 0;
    // Read from slave nodes.
    SLAVE = 1;
    // Read from all nodes.
    BOTH = 2;
  }
  // Strategy of a read only command.
  ReadStrategy read_strategy = 1;

  reserved 2 to 4;
}
